# libwinyl

./: CMakeLists.txt  DOCS_MAINPAGE.md  Doxyfile  LICENSE  Makefile  README.md  test.c
cmake/: winylConfig.cmake.in
include/: header.h  request.h  version.h  winyl.h
src/: header.c  request.c  version.c  winyl.c
